--- a/CuboComputadora/Javascript/css/style.css
+++ b/CuboComputadora/Javascript/css/style.css
@@ -8,7 +8,7 @@ body{
 
 }
 .navPrincipal{
-    width: 100px;
+    width: 120px;
     height: 100%;
     background-color: #26282a;
     position: fixed;
@@ -29,10 +29,10 @@ body{
 
 .VentanaDeJuegos{
     position: absolute;
-    height: 800px;
-    width: 850px;
-    margin-top: -800px;
-    margin-left: 450px;
+    height: 728px;
+    width: 1080px;
+    /* margin-top: -800px; */
+    margin-left: 120px;
     background-color: #9e9e9e;
     transition: all 0.4s;
 } 
@@ -53,6 +53,7 @@ form{
 }
 #CuboContainer{
     margin-top: 200px;
+    margin-left: 443px;
 }
 #iconoCubo{
     border: 2px solid #4edba7;
