Juego Buscando Caras
Se puede utilizar las flechas del teclado para jugar , falta agregar el nivel 3 del juego "Buscando Caras"

--- a/CuboComputadora/Javascript/css/style.css
+++ b/CuboComputadora/Javascript/css/style.css
@@ -1,5 +1,5 @@
 *{
-    padding: 0;
+    padding: 0px;
 
 }
 body{
@@ -8,17 +8,22 @@ body{
 
 }
 .navPrincipal{
-    width: 120px;
+    width: 128px;
     height: 100%;
     background-color: #26282a;
     position: fixed;
+    padding: 0px;
+    margin: 0px;
+    margin-left: -15px;
     z-index: 1;
+    transform: all 0.7s;
+
 }
+
 #cuboletra{
     color: #4edba7;
 }
 .Ingreso{
-    margin-left: 100px;
     height: 100%;
     width: 350px;
     border-right:2px solid #9e9e9e;
@@ -30,11 +35,12 @@ body{
 .VentanaDeJuegos{
     position: absolute;
     height: 728px;
-    width: 1080px;
+   /* width: 98.75%;*/
+    width: 66%;
     /* margin-top: -800px; */
-    margin-left: 120px;
-    background-color: #9e9e9e;
+    background-color: #393D40;
     transition: all 0.4s;
+    border-right: 4px solid white;
 } 
 .VentanaDeJuegos.active{
     margin-left: 100px;
@@ -53,8 +59,278 @@ form{
 }
 #CuboContainer{
     margin-top: 200px;
-    margin-left: 443px;
+    margin-left: 400px;
 }
 #iconoCubo{
     border: 2px solid #4edba7;
+}
+.contPrincipal{
+    height: 100%;
+    width: 100%;
+}
+.barraPuntos{
+
+    height: 728px;
+    width: 34%;
+    background-color: #393D40;
+    margin-left: 66%;
+}
+.txt{
+    color: white;
+    font-size: 28px;
+}
+.secuencia{
+    height: 600px;
+    width: 100%;
+    position: fixed;
+}
+#CarasMod{
+    height: 200px;
+    width: 200px;
+    background-color: #393D40;
+    margin-left: 150px;
+    border-radius: 5%;
+    transition: all 1s;
+}
+.barraJuegos{
+    height: 728px;
+    width: 250px;
+    background-color: #26282a;
+    position: fixed;
+    margin-top: -728px;
+    margin-left: -300px;
+    transition: all 0.4s;
+    border-right:4px solid #4edba7;
+}
+.barraJuegos.active{
+    margin-left: 0px;
+    transition: all 0.4s;
+}
+.barraJuegos.desactive{
+    margin-left: -300px;
+    transition: all 0.4s;
+}
+
+.subjuegos{
+    background-color: white;
+    height: 100px;
+    width: 100px;
+    margin-left: 140px;
+    margin-top: 20px;
+    border-top-left-radius: 20%;
+    border-bottom-right-radius: 20%;
+    
+}
+.subjuegostitulo{
+    color: white;
+    margin-left: 140px;
+}
+#menuJuego{
+    height: 400px;
+    width: 200px;
+    position: fixed;
+    margin-left: 350px;
+    margin-top: 30px;
+}
+.opcionesJuego{
+    width: 300px;
+    height: 200px;
+    background-color: #393D40;
+}
+.seleccionColor{
+    width: 50px;
+    height: 50px;
+    padding: 10px 10px;
+}
+.rojocaja{
+    background: hsla(0, 100%, 50%, 1);
+    padding: 10px 10px;
+}
+.azulcaja{
+    background: hsla(240, 100%, 50%, 1);
+    padding: 10px 10px;
+}
+.rosacaja{
+    background: hsla(300, 100%, 50%, 1);
+    padding: 10px 10px;
+}
+.verdecaja{
+    background: hsla(120, 100%, 50%, 1);
+    padding: 10px 10px;
+}
+.amarrillocaja{
+    background: hsla(60, 100%, 50%, 1);
+    padding: 10px 10px;
+}
+.celestecaja{
+    background: hsla(180, 100%, 50%, 1);
+    padding: 10px 10px;
+}
+.noseleccion{
+    background-color: white;
+    padding: 10px 10px;
+}
+#caja1{
+    margin-top: 20px;
+    padding: 10px 10px;
+    transition: all 0.4s;
+}
+#caja2{
+    margin-top: 20px;
+    padding: 10px 10px;
+    transition: all 0.4s;
+}
+#caja3{
+    margin-top: 20px;
+    padding: 10px 10px;
+    margin-left: 4px;
+    position: fixed;
+    transition: all 0.4s;
+}
+#caja3.active{
+    margin-top: 400px;
+    transition: all 0.4s;
+}
+#caja2.active{
+    margin-top: 400px;
+    transition: all 0.4s;
+}
+#caja1.active{
+    margin-top: 400px;
+    transition: all 0.4s;
+}
+#caja1.desactive{
+    margin-top: 200px;
+    transition: all 0.4s;
+}
+#selectorNiveles{
+    transition: all 0.4s;
+}
+#selectorNiveles.active{
+    transition: all 0.4s;
+    margin-top: 400px;
+}
+#botonJugar{
+    position: fixed;
+}
+#botonJugar{
+    width: 300px;
+}
+#SimonDice{
+    background-color: #4edba7;
+    text-align:center;
+    border-bottom: 4px solid white;
+}
+#SdeSimonDice{
+    width: 90px;
+    height: 90px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 4rem;
+    color: black;
+
+}
+#Buscando{
+    background-color: yellow;
+    text-align:center;
+    border-bottom: 4px solid white;
+    color: yellow;
+
+}
+#BdeBuscando{
+    width: 90px;
+    height: 90px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 3.5rem;
+    color: black;
+}
+
+.puntos{
+    position: fixed;
+    transition: all 0.4s;
+    margin-left: -370px;
+}
+#Puntostt{
+    transition: all 0.4s;
+}
+#tiempo{
+    position: fixed;
+    color: black;
+    margin-left: 500px;
+    margin-top: 100px;
+    transition: all 0.01;
+}
+.vamosaver{
+    position: fixed;
+    background-image: url('../img/corazon.svg');
+    width: 50px;
+    height: 50px;
+}
+#JuegoPerdido{
+    height: 200px;
+    width: 300px;
+    background-color: black;
+    position: fixed;
+    margin-top: 550px;
+    margin-left: 400px;
+
+}
+#Salir{
+    background-color: blue;
+    width: 50%;
+    height: 50%;
+}
+#JugarDeNuevo{
+    background-color: green;
+    width: 50%;
+    height: 50%;
+}
+
+.barrades{
+    margin-left: 260px;
+    margin-top: -60px;
+    position: fixed;
+    height: 50px;
+    width: 50px;
+    background-color: #4edba7;
+    border-radius: 50%;
+    animation: mymove 2s infinite;
+}
+#arrow{
+    font-size: 3rem;
+    transform: translate(6px, -10px);
+    color: white;
+    
+}
+@keyframes mymove {
+    0%   {transform: scale(1,1);}
+    50%   {transform: scale(0.8,0.8);}
+    100% {transform: scale(1,1);}
+    
+  }
+.AnuncioD{
+    
+}
+.contRondas{
+    position: fixed;
+    background-color: #393D40;
+    margin-left: 810px;
+    margin-top: -470px;
+    color: #4edba7;
+    width: 400px;
+    font-size: 1.5rem;
+    font-family: Helvetica;
+    
+}
+.Rondas{
+    margin-top: 0px;
+    border-bottom: 2px solid #4edba7;
+    border-bottom-left-radius: 20%;
+    border-top-right-radius: 20%;
+    border: 2px solid;
+    height: 60px;
+    
 }
