--- a/CuboComputadora/Javascript/css/style.css
+++ b/CuboComputadora/Javascript/css/style.css
@@ -112,16 +112,23 @@ form{
     transition: all 1s;
 }*/
 .barraJuegos{
-    height: 728px;
-    width: 250px;
-    background-color: #26282a;
+    height: 250px;
+    width: 200px;
+    background-color: transparent;
     position: fixed;
-    margin-top: -728px;
+    margin-top: -528px;
+    border-bottom-right-radius: 5%;
+    border-top-right-radius: 5%;
     margin-left: -300px;
     transition: all 0.4s;
-    border-right:4px solid #4edba7;
+    /*border-right:4px solid #4edba7;*/
+}
+.barraJuegos:hover{
+    width: 380px;
+    background-color: #4edba7;
 }
 .barraJuegos.active{
+    /*overflow: hidden;*/
     margin-left: 0px;
     transition: all 0.4s;
 }
@@ -131,13 +138,13 @@ form{
 }
 
 .subjuegos{
-    background-color: white;
+    /*background-color: white;
     height: 100px;
-    width: 100px;
+    width: 100px;*/
     margin-left: 140px;
-    margin-top: 20px;
+    margin-top: 20px;/*
     border-top-left-radius: 20%;
-    border-bottom-right-radius: 20%;
+    border-bottom-right-radius: 20%;*/
     
 }
 .subjuegostitulo{
@@ -243,34 +250,40 @@ form{
 #botonJugar{
     width: 300px;
 }
-#SimonDice{
-    background-color: #4edba7;
-    text-align:center;
-    border-bottom: 4px solid white;
-}
-#SdeSimonDice{
-    width: 90px;
-    height: 90px;
+#PdePalabra{
+    width: 48px;
+    /*height: 90px;*/
     position: relative;
     top: 50%;
-    transform: translateY(-50%);
-    font-size: 4rem;
+}
+#SimonDice{
+    /*background-color: #4edba7;*/
+    /*text-align:center;
+    border-bottom: 4px solid white;*/
+}
+#SdeSimonDice{
+    width: 48px;
+    /*height: 90px;*/
+    position: relative;
+    top: 50%;
+    /*transform: translateY(-50%);
+    font-size: 4rem;*/
     color: black;
 
 }
 #Buscando{
-    background-color: yellow;
+    /*background-color: yellow;
     text-align:center;
     border-bottom: 4px solid white;
-    color: yellow;
+    color: yellow;*/
 
 }
 #BdeBuscando{
-    width: 90px;
-    height: 90px;
+    width: 48px;
+   /* height: 90px;*/
     position: relative;
     top: 50%;
-    transform: translateY(-50%);
+   /* transform: translateY(-50%);*/
     font-size: 3.5rem;
     color: black;
 }
@@ -285,10 +298,10 @@ form{
 }
 #tiempo{
     position: fixed;
-    color: black;
-    margin-left: 500px;
+    color: white;
+    margin-left: 450px;
     margin-top: 100px;
-    transition: all 0.01;
+    font-size: 20px;
 }
 .vamosaver{
     position: fixed;
@@ -318,7 +331,7 @@ form{
 
 .barrades{
     margin-left: 260px;
-    margin-top: -60px;
+    margin-top: 40px;
     position: fixed;
     height: 50px;
     width: 50px;
@@ -616,4 +629,76 @@ form{
 }
 #botonPrev{
     margin-left: 20%;
+}
+
+#pieDePagina{
+    margin-top: -40px;
+    margin-left: 5%;
+    color: #4edba7;
+    margin-bottom: 0.75rem;
+    font-size: 0.95rem;
+}
+#cuerpoCardPie{
+    max-width: 18rem;
+    background-color: #26282a;
+}
+#ulDelnavP{
+    border-top: 2px solid #4edba7;
+    margin-top: 20px;
+}
+li.menu.nav-item {
+    margin-top: 20px;
+}
+#imgUabc{
+    width: 110%;
+}
+.toolgif{
+    color:initial;
+    position: relative;
+    top:0px;
+    left: 0px;
+}
+
+.arrow{
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    left: 50%;
+    margin-left: 200px;
+    top: -2px;
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-top: 4px solid;
+    opacity: 1;
+    display: none;
+}
+.NavJ{
+    position: fixed;
+    overflow: invisible;
+    top: 230px;
+    left: 200px;
+    color: white;
+    opacity: 0;
+    font-size: 1.2rem;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+.toolgif-gif{
+    margin-left: 340px !important;
+    border-top-right-radius: 20px !important;
+    top: -80px !important;
+}
+#ParteSuperiorCont{
+    height: 30px;
+}
+.list-group-item:last-child {
+    background-color: #26282a;
+}
+.badge-primary {
+    background-color: #4edba7;
+}
+#simonDiceNav{
+    margin-top: 80px;
+}
+#completaPalabraNav{
+    margin-top: 150px;
 }
