--- a/CuboComputadora/Javascript/css/style.css
+++ b/CuboComputadora/Javascript/css/style.css
@@ -118,7 +118,7 @@ form{
     position: fixed;
     margin-top: -528px;
     border-bottom-right-radius: 5%;
-    border-top-right-radius: 5%;
+    /*border-top-right-radius: 5%;*/
     margin-left: -300px;
     transition: all 0.4s;
     /*border-right:4px solid #4edba7;*/
@@ -683,7 +683,7 @@ li.menu.nav-item {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .toolgif-gif{
-    margin-left: 340px !important;
+    margin-left: 380px !important;
     border-top-right-radius: 20px !important;
     top: -80px !important;
 }
